# Chess-Engine

./: CMakeLists.txt  Project.cpp  save_to_txt.ps1
include/: Bishop.h  Black.h  BlackBishop.h  BlackKing.h  BlackKnight.h  BlackPawn.h  BlackQueen.h  BlackRook.h  Display.h  Engine.h  Game.h  King.h  Knight.h  Pawn.h  Piece.h  Queen.h  Rook.h  White.h  WhiteBishop.h  WhiteKing.h  WhiteKnight.h  WhitePawn.h  WhiteQueen.h  WhiteRook.h  output.txt  pch.h
include/buffer/: BlackPawn.h  WhitePawn.h
src/: Bishop.cpp  Black.cpp  BlackBishop.cpp  BlackKing.cpp  BlackKnight.cpp  BlackPawn.cpp  BlackQueen.cpp  BlackRook.cpp  Display.cpp  Game.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  White.cpp  WhiteBishop.cpp  WhiteKing.cpp  WhiteKnight.cpp  WhitePawn.cpp  WhiteQueen.cpp  WhiteRook.cpp  output.txt
